--- a/currency-v1/pom.xml
+++ b/currency-v1/pom.xml
@@ -22,6 +22,17 @@
 			</releases>
 		</pluginRepository>
 	</pluginRepositories>
+	<repositories>
+        <repository>
+            <id>central</id>
+            <name>Central Repository</name>
+            <url>https://repo.maven.apache.org/maven2</url>
+            <layout>default</layout>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
